Se agrega landing Mobirise. Otros cambios de base.

--- a/TesterBlazor/TesterBlazor.csproj
+++ b/TesterBlazor/TesterBlazor.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\landing\**" />
+    <Content Remove="wwwroot\landing\**" />
+    <EmbeddedResource Remove="wwwroot\landing\**" />
+    <None Remove="wwwroot\landing\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
