--- a/TesterProject/TesterProject.csproj
+++ b/TesterProject/TesterProject.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.Json" Version="9.0.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="Telegram.Bot" Version="22.4.4" />
   </ItemGroup>
 
